[package]
name = "cargo-test-junit"
version = "0.6.4"
authors = ["Joe Grund <joe.grund@intel.com>"]
keywords = ["test", "cargo", "junit", "jenkins"]
license = "MIT"
repository = "https://github.com/rustation/cargo-test-junit"
description = "Converts cargo test output into a junit report"

[dependencies]
test-to-vec = "0.4.3"
nom = "3.2.1"
duct = "0.4.0"
sxd-document = "0.2.0"
clap = "2.19.2"
