[package]
name = "cargo-test-junit"
version = "0.6.7"
authors = ["Joe Grund <joe.grund@intel.com>"]
keywords = ["test", "cargo", "junit", "jenkins"]
license = "MIT"
repository = "https://github.com/rustation/cargo-test-junit"
description = "Converts cargo test output into a junit report"

[dependencies]
test-to-vec = "0.4.3"
nom = "3.2.1"
duct = "0.13.4"
sxd-document = "0.3.2"
clap = "2.33.3"
crossbeam = "0.7.3"
